# watch-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker-build.yml
server/: Dockerfile  index.html  package.json  server.js
src/watch_server/: __init__.py  plot_data.py  server.py
