[project]
name = "watch-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "minio>=7.2.9",
    "numpy>=2.1.2",
    "ruff>=0.6.9",
    "sfapi-client>=0.3.1",
    "tqdm>=4.66.5",
]

[project.scripts]
watch-server = "watch_server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
